# ufora-cli

./: .gitignore  README.md  pyproject.toml
ufora_cli/: __init__.py  cli.py  timeedit_parser.py
