[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufora-cli"
version = "1.0.0"
description = "A command-line tool for accessing UGent course material"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Lucas Op de Beeck", email = "lucasopdebeeck@gmail.com"}
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "playwright>=1.40.0",
    "rich>=13.0.0",
]

[project.scripts]
ufora = "ufora_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/lucasodb/ufora-cli"

[tool.setuptools]
packages = ["ufora_cli"]